--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,8 @@
   text-align: center;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
 }
 
